--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg fixed-top">
-    <img src="/assets/images/umniahlogo1.png" href="#">
-    <a class="navbar-brand" href="#">Umniah - ETT </a>
+    <img src="assets/images/umniahlogo1.png" href="#">
+    <a class="navbar-brand" href="dashboard">Umniah - ETT </a>
 
     <button class="navbar-toggler" type="button" (click)="toggleSidebar()">
       <span class="navbar-toggler-icon"></span> 
