--- a/src/app/layout/tasks/dialog-overview-example-dialog.html
+++ b/src/app/layout/tasks/dialog-overview-example-dialog.html
@@ -1,10 +1,10 @@
 <h1 mat-dialog-title>Hi </h1>
 <div class="col-xs-12">
-    <p>Site Name: {{data.sitename}}</p>
+    <p>Site Name: </p>
     <hr>
-    <p>Employee: {{data.employee}} </p>
+    <p>Employee:  </p>
     <hr>
-    <p>Task: {{data.actiontaken}} </p>
+    <p>Task:  </p>
 
 </div>
 <div>
