--- a/src/app/layout/updatetask/updatetask.component.html
+++ b/src/app/layout/updatetask/updatetask.component.html
@@ -36,14 +36,16 @@
                             <!-- Progress Column -->
                             <ng-container matColumnDef="progress">
                                 <mat-header-cell *matHeaderCellDef mat-sort-header> Task Name </mat-header-cell>
-                                <mat-cell *matCellDef="let row"> {{row.progress}} </mat-cell>
-                            </ng-container>
-
-                            <!-- Name Column -->
-                            <ng-container matColumnDef="name">
-                                <mat-header-cell *matHeaderCellDef mat-sort-header> Task Description </mat-header-cell>
                                 <mat-cell *matCellDef="let row"> {{row.name}} </mat-cell>
                             </ng-container>
+
+
+<ng-container matColumnDef="weekly">
+                                <mat-header-cell *matHeaderCellDef mat-sort-header> Weekly Update </mat-header-cell>
+                                <mat-cell *matCellDef="let row"> {{row.weekly}} </mat-cell>
+                            </ng-container>
+
+                           
 
                             <!-- Color Column -->
                             <ng-container matColumnDef="color">
@@ -66,7 +68,7 @@
                             </mat-row>
                         </mat-table>
 
-                        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+                        <mat-paginator [pageSize]="25" [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
                     </div>
                 </div>
             </div>
@@ -165,6 +167,24 @@
 
                                 </td>
                             </tr>
+				<tr><hr></tr>
+				<tr>
+                            <td colspan=75%>
+                                <mat-form-field>
+                                    <mat-select placeholder="Please Select Status" [(value)]="selected1" (change)="onChange1($event)">
+                                        <mat-option value="Normal">Normal</mat-option>
+                                        <mat-option value="Potential Delay">Potential Delay</mat-option>
+                                        <mat-option value="Delayed">Delayed</mat-option>
+                                        <mat-option value="Major Delay">Major Delay</mat-option>
+                                        <mat-option value="Faliure">Faliure</mat-option>
+
+                                    </mat-select>
+                                </mat-form-field>
+                            </td>
+                        </tr>
+                        <tr>
+                            <hr>
+                        </tr>
                             <tr>
                                 <td colspan=100%>
                                     <hr style="width: 100%">
@@ -186,9 +206,17 @@
                                 </td>
                                 <td>
                                     <mat-form-field *ngFor="let item of myentitiesarray;let in=index" myentitiesarray class="example-full-width">
-                                        <input matInput placeholder="Entity Update" [(ngModel)]="enitiesmodel[in].entityupdate">
+                                        <textarea matInput placeholder="Entity Update" [(ngModel)]="enitiesmodel[in].entityupdate"></textarea>
                                     </mat-form-field>
                                 </td>
+                                <!-- <td>
+                                    <mat-form-field *ngFor="let item of myentitiesarray;let in=index" myentitiesarray class="example-full-width">
+                                        <input matInput [matDatepicker]="dp5" placeholder="Date of Update" disabled [(ngModel)]="enitiesmodel[in].dateofupdate">
+                                        <mat-datepicker-toggle matSuffix [for]="dp5"></mat-datepicker-toggle>
+                                        <mat-datepicker #dp5 disabled="false"></mat-datepicker>
+                                    </mat-form-field>
+                                </td> -->
+
                             </tr>
                             <tr>
                                 <td colspan=100%>
@@ -241,7 +269,7 @@
                                                 </td>
                                                 <td *ngIf="isPending">
                                                     <mat-form-field>
-                                                        <input matInput placeholder="Pending Task" disabled [(ngModel)]="pendingArray[in1].result">
+                                                        <input matInput placeholder="Feedback" disabled [(ngModel)]="pendingArray[in1].result">
                                                     </mat-form-field>
                                                 </td>
                                             </tr>
